apps/base/media/speakarr/speakarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: speakarr-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://speakarr.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Speakarr"
    gethomepage.dev/description: "Audiobooks (Readarr instance)"
    gethomepage.dev/app: speakarr
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/readarr.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`speakarr.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: speakarr
          port: 8787
  tls: {}
